bitfields/tests/compile_error_cases/errors/bitfield_default_value_unknown_suffix.rs
use bitfields::bitfield;

#[bitfield(u8)]
pub struct Bitfield {
    #[bits(8, default = 9op)]
    a: u8,
}

fn main() {
    let bitfield = Bitfield::new();
}
