bitfields/tests/compile_error_cases/errors/bitfield_default_value_unknown_suffix.stderr
error: invalid suffix `op` for number literal
 --> tests/compile_error_cases/errors/bitfield_default_value_unknown_suffix.rs:3:1
  |
3 | #[bitfield(u8)]
  | ^^^^^^^^^^^^^^^ invalid suffix `op`
  |
  = help: the suffix must be one of the numeric types (`u32`, `isize`, `f32`, etc.)
  = note: this error originates in the attribute macro `bitfield` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `bitfield`
  --> tests/compile_error_cases/errors/bitfield_default_value_unknown_suffix.rs:10:9
   |
10 |     let bitfield = Bitfield::new();
   |         ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_bitfield`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
